--- a/thoughtstream-frontend/index.html
+++ b/thoughtstream-frontend/index.html
@@ -2,6 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
+    
+
     <meta charset="UTF-8" />
     <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin">
 
