--- a/thoughtstream-frontend/index.html
+++ b/thoughtstream-frontend/index.html
@@ -4,6 +4,9 @@
   <head>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMt23cez/7Xk0t/mAq/ZlW9ni3f6R9/7ROndEpe"
+    crossorigin="anonymous"
+  />
 
     
 
